main.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');

* {
    scroll-behavior: smooth;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/* STYLES FOR NAVIGATION 
<-------------------------------------------------------------------------------------------------------> */ 

.navigation-bar {
    filter: drop-shadow(0 -10px 20px rgb(170,170,170));
    transition: 0.7s ease-in-out;
    z-index: 9999;
    position: fixed;
    width: 100%;
    top: 0;
    background-color: rgba(255, 255, 255, 0.996);
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}
.navigation-list {
    display: flex;
    width: 50%;
}
.navigation-list li {
    font-family: 'Open Sans', sans-serif;
    justify-content: center;
    display: flex;
    align-items: center;
    text-align: center;
    width: 100%;
    list-style-type: none;
}
.nav-icons-links {
    margin-top: 15px;
    line-height: 3.1em;
    text-align: center;
    font-size: 1em;
    color: black;
    text-decoration: none;
    max-width: 40%;
}
.nav-icons-links:hover {
    color: black;
    font-weight: 600;
}
.nav-icons-links:after {
    background-color: rgb(64, 205, 245);
    content: '';
    height: 1.5px;
    width: 0%;
    transition: 0.5s ease-in-out;
    display: block;
}
.nav-icons-links:hover:after {
    width: 100%;
}
.openNavigationBar-mobile {
    display: none; 
    background-image: url("Images/Nav-Bar\ sand.png");
    background-size: contain;
    background-repeat: no-repeat;
    width: 30px;
    height: 30px;
}
#logo {
    max-width: 190px;
}
#movingDown {
   transform: translate3d(0,-100%,0);
}
#movingUp {
   filter: drop-shadow(0 -10px 20px rgb(170,170,170));
}
#close {
    display: flex !important;
}
#open {
    display: flex !important;
}

/* STYLES FOR THE FIRST (main - landing) SECTION 
<-------------------------------------------------------------------------------------------------------> */ 

.landing-Section {
   display: flex;
   justify-content: center;
   align-items: center;  
   width: 100%;
   height: 89vh;
   background-color: rgba(0, 0, 0,0.6);
}
.landing-section-video {
    min-width: 100%;
    min-height: 100%;
    position: absolute;
    right: 0;
    z-index: -10;
}
.landing-section-mobile-img {
   display: none;
}
#left-Panel {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    width: 50%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items:center;
    gap: 8%;
    height: 100%;
}
#left-Panel h1 {
    font-weight: 650;
    margin-top: 100px;
    width: 90%;
    color: rgb(255, 255, 255);;
}
#right-Panel {
    width: 50%;
}
#appointment {
    transition: all .2s ease-in-out;
    cursor: pointer;
    color: white;
    font-size: 1.5vw;
    border: 1px solid rgb(29, 101, 124);
    border-radius: 5px;
    height: 55px;
    width: 30%;
}
#appointment:hover {
    transform: scale(1.1);
}
.form-color {
    color: rgb(54, 104, 195);
}
.phone-number {
    text-decoration: none;
}
.phone-number:hover {
    color: black;
}

/* STYLES FOR THE DETAIL SECTION
<-------------------------------------------------------------------------------------------------------> */ 

.detail-Section {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   width: 100%;
   background-image: url('Images/blue-grain-village-dental-edit2.jpg');
   background-size: cover;
   background-repeat: no-repeat;
}
.detail-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 85%;
    height: 80%;
    border: 2px solid white;
    border-top-right-radius: 50px;
    border-bottom-left-radius: 50px;
}
.detail-right-panel {
    gap: 10%;
    flex-direction: column;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: left;   
    width: 100%;
    height: 100%;
    color: rgb(255, 255, 255);
}
.detail-right-panel h1 {
    background: linear-gradient(to bottom, #f9dc9d 22%,#e9bc6d 24%, #f7cc6e 26%, #edc162 27%,#f1c855 40%,#d8af5b 78%); 
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    color: #fff;
    text-align: center;
    font-family: 'Montserrat', sans-serif;
}
.detail-left-panel {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}
#detail-left-panel-img {
    background-image: url("Images/be_a_denist-removebg-preview.png");
    background-size: cover;
    background-repeat: round;
    width:  500px;
    height: 350px;
}
.detail-right-panel-offers {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.detail-right-panel-offers-order {
    padding: 7px;
    font-size: 20px;
    text-align: left;
    width: 70%;
    display: flex;
    gap: 30px;
    justify-content: center;
}
.offers-order-img {
    background-image: url("Images/list-image.png");
    background-size: cover;
    background-repeat: round;
    width: 30px;
    height: 30px;
    margin-top: 1px;
}
.offers-order-txt {
    width: 50%;
}
.detail-right-panel-button {
    text-decoration: none;
    background-color: transparent;
    cursor: pointer;
    color: white;
    font-size: 1.5vw;
    border: 1px solid rgb(230, 181, 57);
    box-shadow: 1px 1px 1px 1px rgba(233, 164, 46, 0.7);
    border-radius: 2px;
    height: 45px;
    width: 25%;
}
/* ... */

